--- a/eisenhower-matrix/pom.xml
+++ b/eisenhower-matrix/pom.xml
@@ -64,7 +64,7 @@
         <version>2.2.0</version>
         <configuration>
           <!-- TODO: set project ID. -->
-          <deploy.projectId>summer20-sps-32</deploy.projectId>
+          <deploy.projectId>eisenhower-matrix-290816</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
       </plugin>
